@@ -484,8 +484,11 @@ sub ctx_destroy_test {
 
     { my $ctx = context(); $ctx = undef } $line2 = __LINE__;
 
+    use Data::Dumper;
+#    print Dumper(@warn);
+
     like($warn[0], qr/context appears to have been destroyed without first calling release/, "Is normal context warning");
-    like($warn[0], qr{\QContext destroyed at ${ \__FILE__ } line $line2.\E}, "Reported context destruction trace");
+    like($warn[0], qr{\QContext destroyed at ${ \__FILE__ } line $line2\E}, "Reported context destruction trace");
 
     my $created = <<"    EOT";
 Here are the context creation details, just in case a tool forgot to call
