@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix context test on older perls
+
 1.302165  2019-08-15 10:21:09-07:00 America/Los_Angeles
 
     - Better diagnostics when a context is destroyed unexpectedly
